--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "public/themes/basecamp"]
 	path = public/themes/basecamp
 	url = http://github.com/albion/redmine-basecamp-theme.git
+[submodule "vendor/plugins/acts-as-taggable-on"]
+	path = vendor/plugins/acts-as-taggable-on
+	url = git://github.com/rymai/acts-as-taggable-on.git
+[submodule "vendor/plugins/redmine_tagging"]
+	path = vendor/plugins/redmine_tagging
+	url = http://github.com/friflaj/redmine_tagging.git
