--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/plugins/redmine_tagging"]
 	path = vendor/plugins/redmine_tagging
 	url = http://github.com/friflaj/redmine_tagging.git
+[submodule "vendor/plugins/action_mailer_optional_tls"]
+	path = vendor/plugins/action_mailer_optional_tls
+	url = http://github.com/collectiveidea/action_mailer_optional_tls.git
