--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vendor/plugins/redmine_backlogs"]
 	path = vendor/plugins/redmine_backlogs
 	url = git://github.com/relaxdiego/redmine_backlogs.git
+[submodule "vendor/plugins/redmine_gitosis"]
+	path = vendor/plugins/redmine_gitosis
+	url = http://github.com/mattmeng/redmine_gitosis.git
