--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vendor/plugins/redmine_checkout"]
 	path = vendor/plugins/redmine_checkout
 	url = git://github.com/avit/redmine_checkout.git
+[submodule "vendor/plugins/redmine_markdown_extra_formatter"]
+	path = vendor/plugins/redmine_markdown_extra_formatter
+	url = https://github.com/juno/redmine_markdown_extra_formatter.git
