--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vendor/plugins/redmine_opensearch"]
 	path = vendor/plugins/redmine_opensearch
 	url = https://github.com/meineerde/redmine_opensearch.git
+[submodule "vendor/plugins/redmine_ical"]
+	path = vendor/plugins/redmine_ical
+	url = https://git.fachschaften.org/redmine_ical
